gradiant blend, remove spacing need to fix medium layout, Nav moved

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,30 +29,33 @@ h1 {
     padding-bottom: 2.5rem;
 }
 
+
 .header {
     padding-bottom: 5rem;
 }
 
 nav {
-    height: 6.25rem;
-    border-bottom-color: white;
+    /*background-image: url("../images/background_header.png");*/
+    background-size: cover;
+    height: 6rem;
     background-color: rgba(255, 255, 255, .15);
     backdrop-filter: blur(5px);
 }
 
 .nav-link {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.014em;
     color: #0D4A40;
 }
 
-#nav-home {
-    background-image: url("../images/background_header.png");
-    background-size: cover;
-    /*background-attachment: fixed;*/
-    background-repeat: no-repeat;
-}
-
 #home {
-    background: linear-gradient(180deg, rgba(234, 240, 235, 0) 0%, #EBF1EC 83.91%);
+    background-image: linear-gradient(180deg, rgba(234, 240, 235, 0) 82%, #EDF3EE 90%), url("../images/background_header.png");
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     height: 78vh;
     line-height: 3rem;
@@ -60,6 +63,7 @@ nav {
 }
 
 .introduction {
+    place-content: center;
     padding: 2rem 0 0 2rem;
     animation: fadeUpAnimation ease 3s;
     animation-iteration-count: 1;
@@ -69,6 +73,9 @@ nav {
 .introduction h1 {
     font-style: normal;
     font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
     letter-spacing: -0.021em;
 }
 
@@ -258,9 +265,13 @@ nav {
     color: #0C3D35;
 }
 
-.form-control {
+.input {
     border-color: #69A573 !important;
 }
+
+/*.error {*/
+/*    color: #A56969;*/
+/*}*/
 
 footer {
     background: #0D4A40;
@@ -317,10 +328,11 @@ footer .footer-text {
     }
 
     #home {
-        height: 70vh;
+        height: 95vh;
     }
 
     .introduction {
+        place-content: start;
         padding: 8rem 0 0 19.5rem;
     }
 
@@ -328,11 +340,12 @@ footer .footer-text {
         font-weight: 700;
         font-size: 8rem;
         line-height: 9.375rem;
+        text-align: left;
         letter-spacing: -0.021em;
     }
 
     #services {
-        padding: 8rem 16.5rem;
+        padding: 8rem 16.5rem 10rem;
     }
 
     #services h1 {
@@ -343,25 +356,25 @@ footer .footer-text {
         gap: 6.313rem;
     }
 
-    #testimonials {
-        padding: 8rem 7.5rem;
-    }
+    /*#testimonials {*/
+    /*    padding: 8rem 7.5rem;*/
+    /*}*/
 
     .carousel-item p {
         font-size: 2rem;
     }
 
-    #about {
-        padding: 8rem 16.313rem;
-    }
+    /*#about {*/
+    /*    padding: 8rem 16.313rem;*/
+    /*}*/
 
     .about-statements {
         gap: 12.5rem;
     }
 
-    .team {
-        padding: 8rem 20.75rem;
-    }
+    /*.team {*/
+    /*    padding: 100px 200px;*/
+    /*}*/
 
     .brooks, .david {
         gap: 7.875rem;
@@ -373,9 +386,9 @@ footer .footer-text {
         object-fit: cover;
     }
 
-    .contact {
-        padding: 8rem 40rem;
-    }
+    /*.contact {*/
+    /*    padding: 8rem 40rem;*/
+    /*}*/
 
     /*.about-statements {*/
     /*    max-width: 50%;*/
